crystal-facet-uml (1.41.0) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * relationships prefer centered over uncentered departure and arrival
  * relationships have a minumum gap distance towards all classifiers
  * relationships keep distance to symbol boxes of features
  * relationships keep distance to neighbor relationships

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sun, 11 Sep 2022 10:00:00 +0100

crystal-facet-uml (1.40.0) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * A single filename-parameter allows to open files by drag-n-drop on win
  * while exporting, the status line states "Exporting..."
  * Create-diagram icons highlight at mouse-over
  * Improving the relationship layouter, statistics changed on
    "Raspbian GNU/Linux 11 (bullseye)" from:
    layout_good_cases: ERR=0, W/C=7, W/F=171, W/R=45
    layout_challenging_cases: ERR=64, W/C=8033, W/F=8379, W/R=5909
    to:
    layout_good_cases: ERR=0, W/C=7, W/F=171, W/R=58
    layout_challenging_cases: ERR=64, W/C=8033, W/F=8381, W/R=5175

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sun, 28 Aug 2022 08:00:00 +0100

crystal-facet-uml (1.39.0) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * Json format can be opened and written back from gui
  * save button was renamed from commit, moved to top tool bar
  * while loading, the status line states "Loading..."

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sat, 16 Jul 2022 16:00:00 +0100

crystal-facet-uml (1.38.0) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * Nicer layout of grid while dragging and creating objects
  * A single click focuses and selects an element. A second click deselects it
  * json import speed up by factor 20 (1m37,071s -> 0m4,644s) by using
    one top-level transaction only
  * On Windows(TM), the black terminal window is hidden (via -mwindows)
  * The left-right shiftable panes keep the right side constant on resize

 -- Andreas Warnke <cfu@andreaswarnke.de>  Mon, 06 Jun 2022 19:00:00 +0100
